Fix Main and Main-sidebar overflow with 1fr body row

--- a/styles.css
+++ b/styles.css
@@ -78,7 +78,7 @@ body {
 
   display: grid;
   grid-template-columns: minmax(300px, 1fr) repeat(3, minmax(min-content, 1fr)) 300px;
-  grid-template-rows: repeat(5, 1fr);
+  grid-template-rows: 1fr;
 
   grid-template-areas:
     "sidebar header header header header"
@@ -128,7 +128,7 @@ body {
   display: flex;
   flex-direction: column;
   padding: 16px;
-  overflow: scroll;
+  /* overflow: scroll; */
 }
 
 .main-sidebar {
@@ -138,7 +138,7 @@ body {
   flex-direction: column;
   padding: 16px;
   gap: 16px;
-  overflow-y: scroll;
+  /* overflow-y: scroll; */
 }
 
 /* Children */
